[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/characters/enemies/EnemyBase.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/enemies/EnemyHurtbox.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/hit_color = Color( 0.74902, 0.14902, 0.317647, 1 )
shader_param/hit_strength = 0.0

[node name="EnemyBase" type="KinematicBody2D" groups=["drownable"]]
script = ExtResource( 1 )

[node name="VisualDependents" type="Node2D" parent="."]
material = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="VisualDependents" groups=["enemy"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SlowTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="hit" from="VisualDependents/Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
[connection signal="timeout" from="SlowTimer" to="." method="_on_SlowTimer_timeout"]
